# basic_python_logging

./: .gitignore  README.md  index.html  pixi.toml  pyproject.toml  run_rich_logger.py
.github/workflows/: build_gh.yml  static.yml
.ipynb_checkpoints/: index-checkpoint.html
docs/: index.html
notebooks/: basic logging with python.ipynb
src/custom_loggers/: __init__.py  logger_namespace.py  sqlite_logger.py
src/python_std_logging/: basic_logger.py
tests/: mod_test.py  sqlhandler_test.py
