[project]
dependencies = []
name = "python_std_logging"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
tests = ["pytest"]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
python_std_logging = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = {features = ["tests"], solve-group = "default"}

[tool.pixi.dependencies]
hypothesis = ">=6.132.0,<7"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-s --hypothesis-verbosity=debug"
testpaths = ["tests"]

