[project]
dependencies = ["rich"]
name = "custom_loggers"
requires-python = ">= 3.11"
version = "0.1.0"


[project.optional-dependencies]
tests = ["pytest", "hypothesis"]
format = ["ruff"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/custom_loggers"] 
exclude = ["tests*", "docs*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
custom_loggers = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = {features = ["tests", "format"], solve-group = "default"}

[tool.pixi.dependencies]
hypothesis = ">=6.132.0,<7"
rich = ">=14.0.0,<15"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-s --hypothesis-verbosity=debug"
testpaths = ["tests"]

